# OpenCVExample

./: .gitignore  Binary.cpp  CMakeLists.txt  CameraCalibration.cpp  Edges.cpp  Histograms.cpp  MyApplication-submission.cpp  MyApplication.cpp  OpenCVExample.vcxproj  README.md  README.txt  Recognition.cpp  Region.cpp  TODO.md  Utilities.cpp  Utilities.h  Video.cpp  build.sh  clean.sh  main.cpp  run.sh  watershed main.cpp
report/: ass-1-report.aux  ass-1-report.tex  results.txt
